--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -10,7 +10,7 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-hex-rects.html
 		<link href="https://fonts.googleapis.com/css?family=Oswald:200&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<div id='target' style='display: flex;'></div>
+		<div id='target' style='display: flex; justify-content: center;'></div>
 	</body>
 
 	<script src='five-in-a-row.js'></script>
