--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -33,7 +33,7 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-hex.html
 				clear: left;
 			}
 		</style>
-		<div id='target' style='display: flex;'></div>
+		<div id='target' style='display: flex; justify-content: center;'></div>
 	</body>
 
 	<script src='five-in-a-row.js'></script>
