--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -64,13 +64,11 @@ let viewCell = rd.parse(`
 `);
 
 let viewCells = rd.parse(`
-	<rd_map v='vm.indices.map(i => vm[i])'>
-		<div class='hex-row' style='margin-left: { vm[0].x * 26.5 + vm[0].y * 53 }px'>
-			<rd_for>
-				<rd_component v='viewCell' />
-			</rd_for>
-		</div>
-	</rd_map>
+	<div class='hex-row' style='margin-left: { vm[0].x * 26.5 + vm[0].y * 53 }px'>
+		<rd_for>
+			<rd_component v='viewCell' />
+		</rd_for>
+	</div>
 `);
 
 let view = rd.parse(`
@@ -88,7 +86,9 @@ let view = rd.parse(`
 		</span>
 		<rd_map v='vm.board'>
 			<rd_for>
-				<rd_component v='viewCells' />
+				<rd_map v='vm.indices.map(i => vm[i])'>
+					<rd_component v='viewCells' />
+				</rd_map>
 			</rd_for>
 		</rd_map>
 		<!-- button rd_on_click='handleclose()'>close</button -->
@@ -104,6 +104,52 @@ let view = rd.parse(`
 
 let eatdirs = [[0, -1], [-1, 0], [-1, +1], ];
 let movedirs = [[-1, 0], [+1, 0], [0, -1], [0, +1], [-1, +1,], [+1, -1,], ];
+
+const usp = new URLSearchParams(window.location.search);
+const colorsp = usp.get('colors');
+const sizep = usp.get('size');
+
+let size = sizep != null ? +sizep : 7;
+let nStoneTypes = colorsp != null ? +colorsp : 5;
+
+let cc = ((sizex, sizey) => {
+	let startx = 0, endx = startx + sizex;
+
+	let yrange = x => {
+		let o = Math.floor(x / 2);
+		return { starty: -o, endy: sizey - o, };
+	};
+
+	return {
+		area: sizex * sizey,
+		arrayx: () => ({ indices: range(startx, endx).list(), length: endx, }),
+		arrayy: x => {
+			let { starty, endy, } = yrange(x);
+			return { indices: range(starty, endy).list(), length: endy, };
+		},
+		back_xy: f => {
+			for (let x = endx - 1; startx <= x; x--) {
+				let { starty, endy, } = yrange(x);
+				for (let y = endy - 1; starty <= y; y--) f(x, y);
+			}
+		},
+		for_xy: f => {
+			for (let x = startx; x < endx; x++) {
+				let { starty, endy, } = yrange(x);
+				for (let y = starty; y < endy; y++) f(x, y);
+			}
+		},
+		inbounds: (x, y) => {
+			let { starty, endy, } = yrange(x);
+			return startx <= x && x < endx && starty <= y && y < endy;
+		},
+		random_xy: () => {
+			let x = rand(startx, endx);
+			let { starty, endy, } = yrange(x);
+			return { x, y: rand(starty, endy), };
+		},
+	};
+})(size, size);
 
 vw.init();
 
