--- a/src/main/html/five-in-a-row.html
+++ b/src/main/html/five-in-a-row.html
@@ -47,11 +47,9 @@ let viewCell = rd.parse(`
 
 let viewCells = rd.parse(`
 	<tr>
-		<rd_map v='vm.indices.map(i => vm[i])'>
-			<rd_for>
-				<td><rd_component v='viewCell' /></td>
-			</rd_for>
-		</rd_map>
+		<rd_for>
+			<td><rd_component v='viewCell' /></td>
+		</rd_for>
 	</tr>
 `);
 
@@ -71,7 +69,9 @@ let view = rd.parse(`
 		<rd_map v='vm.board'>
 			<table style='border-spacing: 0;'>
 				<rd_for>
-					<rd_component v='viewCells' />
+					<rd_map v='vm.indices.map(i => vm[i])'>
+						<rd_component v='viewCells' />
+					</rd_map>
 				</rd_for>
 			</table>
 		</rd_map>
@@ -86,6 +86,33 @@ let view = rd.parse(`
 
 let eatdirs = [[0, -1], [-1, 0], [-1, +1], [+1, +1],];
 let movedirs = [[-1, 0], [+1, 0], [0, -1], [0, +1],];
+
+const usp = new URLSearchParams(window.location.search);
+const colorsp = usp.get('colors');
+const sizep = usp.get('size');
+
+let size = sizep != null ? +sizep : 7;
+let nStoneTypes = colorsp != null ? +colorsp : 5;
+
+let cc = ((sizex, sizey) => {
+	return {
+		area: sizex * sizey,
+		arrayx: () => ({ indices: range(0, sizex).list(), length: sizex, }),
+		arrayy: x => ({ indices: range(0, sizey).list(), length: sizey, }),
+		back_xy: f => {
+			for (let x = sizex - 1; 0 <= x; x--)
+				for (let y = sizey - 1; 0 <= y; y--)
+					f(x, y);
+		},
+		for_xy: f => {
+			for (let x = 0; x < sizex; x++)
+				for (let y = 0; y < sizey; y++)
+					f(x, y);
+		},
+		inbounds: (x, y) => 0 <= x && x < sizex && 0 <= y && y < sizey,
+		random_xy: () => ({ x: rand(0, sizex), y: rand(0, sizey), }),
+	};
+})(size, size);
 
 vw.init();
 
