--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -6,8 +6,8 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-hex-rects.html
 <html>
 	<head>
 		<title>0 - Five in a row</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="https://fonts.googleapis.com/css?family=Oswald:200&display=swap" rel="stylesheet">
+		<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+		<link href='https://fonts.googleapis.com/css?family=Oswald:200&display=swap' rel='stylesheet'>
 	</head>
 	<body>
 		<div id='target' style='display: flex; justify-content: center;'></div>
