--- a/src/main/html/five-in-a-row-triangle.html
+++ b/src/main/html/five-in-a-row-triangle.html
@@ -27,11 +27,11 @@ let { rd, renderAgain, } = render();
 let close;
 
 let view = rd.parse(`
-    <span style='display: flex; flex-direction:column;'>
+    <span style='display: flex; flex-direction:column; font-size: 36px;'>
         <rd_map v='vm.board'>
             <rd_for v='vm.indices.map(i => ({ l: vm[i], r: vm[i + 1], }))'>
                 <rd_map v='vm.l'>
-                    <span style='display: flex; font-family: monospace; font-size: 30px; margin-bottom: 5px;'>
+                    <span style='display: flex; font-family: monospace; margin-bottom: 5px;'>
                         <rd_for v='vm.indices.map(i => ({ l: vm[i], r: vm[i + 1], }))'>
                             <rd_map v='vm.l'>
                                 <span style='
@@ -69,7 +69,7 @@ let view = rd.parse(`
                     </span>
                 </rd_map>
                 <rd_map v='vm.r'>
-                    <span style='display: flex; font-family: monospace; font-size: 30px; margin-bottom: 5px;'>
+                    <span style='display: flex; font-family: monospace; margin-bottom: 5px;'>
                         <rd_for v='vm.indices.map(i => ({ l: vm[i], r: vm[i + 1], }))'>
                             <rd_map v='vm.l'>
                                 <span style='
