--- a/src/main/html/five-in-a-row-triangle.html
+++ b/src/main/html/five-in-a-row-triangle.html
@@ -115,42 +115,12 @@ let view = rd.parse(`
 renderAgain(view, vm => ({
     board: {
         indices: [0, 2,],
-        [0]: {
+        ...(range(0, 4).map(x => ({
             indices: [0, 2, 4,],
-            [0]: { d: 0, },
-            [1]: { d: 1, },
-            [2]: { d: 0, },
-            [3]: { d: 1, },
-            [4]: { d: 0, },
-            [5]: { d: 1, },
-        },
-        [1]: {
-            indices: [0, 2, 4,],
-            [0]: { d: 2, },
-            [1]: { d: 3, },
-            [2]: { d: 2, },
-            [3]: { d: 3, },
-            [4]: { d: 2, },
-            [5]: { d: 3, },
-        },
-        [2]: {
-            indices: [0, 2, 4,],
-            [0]: { d: 4, },
-            [1]: { d: 5, },
-            [2]: { d: 4, },
-            [3]: { d: 5, },
-            [4]: { d: 4, },
-            [5]: { d: 5, },
-        },
-        [3]: {
-            indices: [0, 2, 4,],
-            [0]: { d: 6, },
-            [1]: { d: 7, },
-            [2]: { d: 6, },
-            [3]: { d: 7, },
-            [4]: { d: 6, },
-            [5]: { d: 7, },
-        },
+            ...(range(0, 6).map(y => ({
+                d: rand(0, icons.length),
+            })).list()),
+        })).list()),
     },
 }));
 
