--- a/src/main/html/block-fill.html
+++ b/src/main/html/block-fill.html
@@ -8,94 +8,96 @@ file:///home/ywsing/suite/src/main/html/block-fill.html
 		<div id='target'></div>
 	</body>
 
+	<script src='eval-script.js'></script>
 	<script src='frp.js'></script>
-	<script src='fun.js'></script>
-	<script src='render.js'></script>
 
 	<script type='text/javascript'>
 'use strict';
 
-let { lens, range, read, } = fun();
-let { rd, renderAgain, } = render();
-let close;
+Promise.resolve(true)
+.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/fun.js', 'fun()'))
+// .then(({ lens, range, read, }) => {
+.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/render.js', 'render()'))
+// .then(({ rd, renderAgain, }) => {
+.then(() => {
+	let vmsetcell = (vmt0, vmc1) =>  {
+		let vmr0 = vmt0[vmc1.x];
+		let vmc0 = vmr0[vmc1.y];
+		let vmr1 = vmr0.map(vmc => vmc != vmc0 ? vmc : vmc1);
+		let vmt1 = vmt0.map(vmr => vmr != vmr0 ? vmr : vmr1);
+		return vmt1;
+	};
 
-let vmsetcell = (vmt0, vmc1) =>  {
-	let vmr0 = vmt0[vmc1.x];
-	let vmc0 = vmr0[vmc1.y];
-	let vmr1 = vmr0.map(vmc => vmc != vmc0 ? vmc : vmc1);
-	let vmt1 = vmt0.map(vmr => vmr != vmr0 ? vmr : vmr1);
-	return vmt1;
-};
+	let dragsource = null;
+	let dragtarget = null;
 
-let dragsource = null;
-let dragtarget = null;
+	let handleclick = (vmc, ev) => renderAgain(view, vm => vmsetcell(vm, { ...vmc, d: !vmc.d, }));
 
-let handleclick = (vmc, ev) => renderAgain(view, vm => vmsetcell(vm, { ...vmc, d: !vmc.d, }));
+	let handledragend = (vm, ev) => {
+		renderAgain(view, vm => {
+			vm = vmsetcell(vm, { ...dragsource, d: dragtarget.d, });
+			vm = vmsetcell(vm, { ...dragtarget, d: dragsource.d, });
+			return vm;
+		});
+	};
 
-let handledragend = (vm, ev) => {
+	let handledragenter = (vm, ev) => dragtarget = vm;
+	let handledragstart = (vm, ev) => dragsource = vm;
+
+	let viewCell = rd.parse(`
+		<div draggable='true'
+			style='
+				background: { vm.d ? "#888888" : "#DDDDDD" };
+				display: table-cell;
+				font-size: 32px;
+				height: 50px;
+				text-align: center;
+				vertical-align: middle;
+				width: 50px;
+			'
+			rd_on_click='handleclick(vm, ev)'
+			rd_on_dragend='handledragend(vm, ev)'
+			rd_on_dragenter='handledragenter(vm, ev)'
+			rd_on_dragexit='{}'
+			rd_on_dragleave='{}'
+			rd_on_dragover='{ ev.dataTransfer.dropEffect = "move"; }'
+			rd_on_dragstart='handledragstart(vm, ev)'
+			rd_on_drop='{}'>
+			<rd_if v='vm.d'>😂</rd_if>
+			<rd_if v='!vm.d'>💖</rd_if>
+		</div>
+	`);
+
+	let view = rd.parse(`
+		<span>
+			<table style='font-family: monospace; font-size: 20; user-select: none;'>
+				<rd_for>
+					<tr>
+						<rd_for>
+							<td>
+								<rd_component v='views.viewCell' />
+							</td>
+						</rd_for>
+					</tr>
+				</rd_for>
+			</table>
+			<button rd_on_click='closer()'>Close</button>
+		</span>
+	`, { viewCell, });
+
+	// let interval = setInterval(() => renderAgain(view, vm => { vm[1][1].d = !vm[1][1].d; return JSON.parse(JSON.stringify(vm)); }), 500);
+
 	renderAgain(view, vm => {
-		vm = vmsetcell(vm, { ...dragsource, d: dragtarget.d, });
-		vm = vmsetcell(vm, { ...dragtarget, d: dragsource.d, });
-		return vm;
+		var vm0 = range(0, 8).map(x => range(0, 8).map(y => ({ d: false, x, y, })).list()).list();
+		vm0[1][1].d = true;
+		return vm0;
 	});
-};
 
-let handledragenter = (vm, ev) => dragtarget = vm;
-let handledragstart = (vm, ev) => dragsource = vm;
-
-let viewCell = rd.parse(`
-	<div draggable='true'
-		style='
-			background: { vm.d ? "#888888" : "#DDDDDD" };
-			display: table-cell;
-			font-size: 32px;
-			height: 50px;
-			text-align: center;
-			vertical-align: middle;
-			width: 50px;
-		'
-		rd_on_click='handleclick(vm, ev)'
-		rd_on_dragend='handledragend(vm, ev)'
-		rd_on_dragenter='handledragenter(vm, ev)'
-		rd_on_dragexit='{}'
-		rd_on_dragleave='{}'
-		rd_on_dragover='{ ev.dataTransfer.dropEffect = "move"; }'
-		rd_on_dragstart='handledragstart(vm, ev)'
-		rd_on_drop='{}'>
-		<rd_if v='vm.d'>😂</rd_if>
-		<rd_if v='!vm.d'>💖</rd_if>
-	</div>
-`);
-
-let view = rd.parse(`
-	<span>
-		<table style='font-family: monospace; font-size: 20; user-select: none;'>
-			<rd_for>
-				<tr>
-					<rd_for>
-						<td>
-							<rd_component v='viewCell' />
-						</td>
-					</rd_for>
-				</tr>
-			</rd_for>
-		</table>
-		<button rd_on_click='close()'>Close</button>
-	</span>
-`);
-
-// let interval = setInterval(() => renderAgain(view, vm => { vm[1][1].d = !vm[1][1].d; return JSON.parse(JSON.stringify(vm)); }), 500);
-
-renderAgain(view, vm => {
-	var vm0 = range(0, 8).map(x => range(0, 8).map(y => ({ d: false, x, y, })).list()).list();
-	vm0[1][1].d = true;
-	return vm0;
+	globalThis.closer = () => {
+		// clearInterval(interval);
+		renderAgain(view, vm => null);
+	};
 });
-
-close = () => {
-	// clearInterval(interval);
-	renderAgain(view, vm => null);
-};
 
 	</script>
 </html>
