--- a/src/main/html/radar.html
+++ b/src/main/html/radar.html
@@ -8,129 +8,135 @@
 		</canvas>
 	</body>
 
+	<script src='eval-script.js'></script>
 	<script src='frp.js'></script>
-	<script src='fun.js'></script>
 
 	<script type='text/javascript'>
-		'use strict';
-		let { lens, range, read, } = fun();
+'use strict';
 
-		let width = window.innerWidth;
-		let height = window.innerHeight;
+Promise.resolve(true)
+.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/fun.js', 'fun()'))
+// .then(({ lens, range, read, }) => {
+.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/render.js', 'render()'))
+// .then(({ rd, renderAgain, }) => {
+.then(() => {
+	let width = window.innerWidth;
+	let height = window.innerHeight;
 
-		let canvas = document.getElementById('canvas');
-		canvas.width = width;
-		canvas.height = height;
+	let canvas = document.getElementById('canvas');
+	canvas.width = width;
+	canvas.height = height;
 
-		let centerx = width / 2, centery = height / 2;
-		let radius = 250;
+	let centerx = width / 2, centery = height / 2;
+	let radius = 250;
 
-		let frame = frp.animframe();
-		let fire = frp.kb.keypressed(32).resample(frame).last();
+	let frame = frp.animframe();
+	let fire = frp.kb.keypressed(32).resample(frame).last();
 
-		let background = {
+	let background = {
+		move: function() {
+			return [this];
+		},
+		draw: context => {
+			context.beginPath();
+			context.arc(centerx, centery, radius, 0, 2 * Math.PI);
+			context.stroke();
+		},
+	};
+
+	let gun = (() => {
+		let angle = 0;
+		let state = 0, fire0, fire1;
+
+		return {
 			move: function() {
+				if (fire()) {
+					state = 1;
+					fire0 = fire1 = 0;
+				}
+
+				if (state == 0) angle += .1;
+				else if (state == 1) state = (fire1 += .05) < 1 ? state : 2;
+				else if (state == 2) state = (fire0 += .05) < 1 ? state : 0;
 				return [this];
 			},
 			draw: context => {
 				context.beginPath();
-				context.arc(centerx, centery, radius, 0, 2 * Math.PI);
+				context.moveTo(centerx, centery);
+				context.lineTo(centerx + 16 * Math.cos(angle), centery + 16 * Math.sin(angle));
+				context.stroke();
+
+				if (state != 0) {
+					context.strokeStyle = '#CCCC00';
+					context.beginPath();
+					context.arc(centerx, centery, radius * fire0, angle - .5, angle + .5);
+					context.stroke();
+					context.beginPath();
+					context.arc(centerx, centery, radius * fire1, angle - .5, angle + .5);
+					context.stroke();
+					/*
+					context.beginPath();
+					context.arc(centerx, centery, radius * fire0, angle - .5, angle + .5);
+					context.arc(centerx, centery, radius * fire1, angle - .5, angle + .5);
+					context.strokeStyle = '#CCCC00';
+					context.fillStyle = '#CCCC00';
+					context.fill();
+					*/
+				}
+			},
+		};
+	})();
+
+	let enemy_ = () => {
+		let angle = 2 * Math.PI * Math.random();
+		let x = centerx + radius * Math.sin(angle);
+		let y = centery + radius * Math.cos(angle);
+
+		return {
+			move: function() {
+				if (.5 < Math.random()) {
+					x += Math.floor(Math.random() * 9) - 4;
+					y += Math.floor(Math.random() * 9) - 4;
+				} else {
+					x += x < centerx ? 1 : -1;
+					y += y < centery ? 1 : -1;
+				};
+				return [this];
+			},
+			draw: context => {
+				context.fillStyle = '#000000';
+				context.moveTo(x - 8, y - 8);
+				context.lineTo(x + 8, y + 8);
+				context.moveTo(x - 8, y + 8);
+				context.lineTo(x + 8, y - 8);
 				context.stroke();
 			},
 		};
+	};
 
-		let gun = (() => {
-			let angle = 0;
-			let state = 0, fire0, fire1;
+	let objects = [background, gun];
+	for (let i = 0; i < 10; i++) objects.push(enemy_());
 
-			return {
-				move: function() {
-					if (fire()) {
-						state = 1;
-						fire0 = fire1 = 0;
-					}
+	frame.wire(data => {
 
-					if (state == 0) angle += .1;
-					else if (state == 1) state = (fire1 += .05) < 1 ? state : 2;
-					else if (state == 2) state = (fire0 += .05) < 1 ? state : 0;
-					return [this];
-				},
-				draw: context => {
-					context.beginPath();
-					context.moveTo(centerx, centery);
-					context.lineTo(centerx + 16 * Math.cos(angle), centery + 16 * Math.sin(angle));
-					context.stroke();
+		// move
+		objects = read(objects)
+			.map(object => read(object.move()))
+			.concat()
+			.list();
 
-					if (state != 0) {
-						context.strokeStyle = '#CCCC00';
-						context.beginPath();
-						context.arc(centerx, centery, radius * fire0, angle - .5, angle + .5);
-						context.stroke();
-						context.beginPath();
-						context.arc(centerx, centery, radius * fire1, angle - .5, angle + .5);
-						context.stroke();
-						/*
-						context.beginPath();
-						context.arc(centerx, centery, radius * fire0, angle - .5, angle + .5);
-						context.arc(centerx, centery, radius * fire1, angle - .5, angle + .5);
-						context.strokeStyle = '#CCCC00';
-						context.fillStyle = '#CCCC00';
-						context.fill();
-						*/
-					}
-				},
-			};
-		})();
+		// repaint
+		let context = canvas.getContext('2d');
+		context.fillStyle = '#777777';
+		context.fillRect(0, 0, width, height);
 
-		let enemy_ = () => {
-			let angle = 2 * Math.PI * Math.random();
-			let x = centerx + radius * Math.sin(angle);
-			let y = centery + radius * Math.cos(angle);
+		context.fillStyle = '#000000';
+		context.font = '10px Helvetica';
+		context.fillText('Demo', 16, height - 16);
 
-			return {
-				move: function() {
-					if (.5 < Math.random()) {
-						x += Math.floor(Math.random() * 9) - 4;
-						y += Math.floor(Math.random() * 9) - 4;
-					} else {
-						x += x < centerx ? 1 : -1;
-						y += y < centery ? 1 : -1;
-					};
-					return [this];
-				},
-				draw: context => {
-					context.fillStyle = '#000000';
-					context.moveTo(x - 8, y - 8);
-					context.lineTo(x + 8, y + 8);
-					context.moveTo(x - 8, y + 8);
-					context.lineTo(x + 8, y - 8);
-					context.stroke();
-				},
-			};
-		};
-
-		let objects = [background, gun];
-		for (let i = 0; i < 10; i++) objects.push(enemy_());
-
-		frame.wire(data => {
-
-			// move
-			objects = read(objects)
-				.map(object => read(object.move()))
-				.concat()
-				.list();
-
-			// repaint
-			let context = canvas.getContext('2d');
-			context.fillStyle = '#777777';
-			context.fillRect(0, 0, width, height);
-
-			context.fillStyle = '#000000';
-			context.font = '10px Helvetica';
-			context.fillText('Demo', 16, height - 16);
-
-			read(objects).foreach(object => object.draw(context));
-		});
+		read(objects).foreach(object => object.draw(context));
+	});
+});
 	</script>
 
 </html>
