--- a/src/main/html/webassembly.html
+++ b/src/main/html/webassembly.html
@@ -13,30 +13,36 @@ file:///home/ywsing/suite/src/main/html/webassembly.html
 		<h1>WebAssembly Demo</h1>
 		<div id='target'></div>
 	</body>
-	<script src='frp.js'></script>
-	<script src='fun.js'></script>
-	<script src='render.js'></script>
+	<script src='eval-script.js'></script>
 </html>
 
 <script>
-let rd_vm = rd_parse(`
-	<span>{ vm.result }</span>
-`);
+'use strict';
 
-let buffer = new Uint8Array([
-0x00, 0x61, 0x73, 0x6d, 0x01, 0x00, 0x00, 0x00, 0x01, 0x86, 0x80, 0x80, 0x80, 0x00, 0x01, 0x60,
-0x01, 0x7f, 0x01, 0x7f, 0x03, 0x82, 0x80, 0x80, 0x80, 0x00, 0x01, 0x00, 0x04, 0x84, 0x80, 0x80,
-0x80, 0x00, 0x01, 0x70, 0x00, 0x00, 0x05, 0x83, 0x80, 0x80, 0x80, 0x00, 0x01, 0x00, 0x01, 0x06,
-0x81, 0x80, 0x80, 0x80, 0x00, 0x00, 0x07, 0x98, 0x80, 0x80, 0x80, 0x00, 0x02, 0x06, 0x6d, 0x65,
-0x6d, 0x6f, 0x72, 0x79, 0x02, 0x00, 0x0b, 0x5f, 0x5a, 0x37, 0x73, 0x71, 0x75, 0x61, 0x72, 0x65,
-0x72, 0x69, 0x00, 0x00, 0x0a, 0x8d, 0x80, 0x80, 0x80, 0x00, 0x01, 0x87, 0x80, 0x80, 0x80, 0x00,
-0x00, 0x20, 0x00, 0x20, 0x00, 0x6c, 0x0b,
-]).buffer;
+Promise.resolve(true)
+.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/fun.js', 'fun()'))
+// .then(({ lens, range, read, }) => {
+.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/render.js', 'render()'))
+// .then(({ rd, renderAgain, }) => {
+.then(() => {
+	let rd_vm = rd.parse(`
+		<span>{ vm.result }</span>
+	`);
 
-WebAssembly.compile(buffer).then(wasm => {
-	let squarer = new WebAssembly.Instance(wasm).exports._Z7squareri;
-	let result = 'Finished compiling! Ready when you are... 3^2 = ' + squarer(3);
-	renderAgain(rd_vm, vm => ({ result: result, }));	
+	let buffer = new Uint8Array([
+	0x00, 0x61, 0x73, 0x6d, 0x01, 0x00, 0x00, 0x00, 0x01, 0x86, 0x80, 0x80, 0x80, 0x00, 0x01, 0x60,
+	0x01, 0x7f, 0x01, 0x7f, 0x03, 0x82, 0x80, 0x80, 0x80, 0x00, 0x01, 0x00, 0x04, 0x84, 0x80, 0x80,
+	0x80, 0x00, 0x01, 0x70, 0x00, 0x00, 0x05, 0x83, 0x80, 0x80, 0x80, 0x00, 0x01, 0x00, 0x01, 0x06,
+	0x81, 0x80, 0x80, 0x80, 0x00, 0x00, 0x07, 0x98, 0x80, 0x80, 0x80, 0x00, 0x02, 0x06, 0x6d, 0x65,
+	0x6d, 0x6f, 0x72, 0x79, 0x02, 0x00, 0x0b, 0x5f, 0x5a, 0x37, 0x73, 0x71, 0x75, 0x61, 0x72, 0x65,
+	0x72, 0x69, 0x00, 0x00, 0x0a, 0x8d, 0x80, 0x80, 0x80, 0x00, 0x01, 0x87, 0x80, 0x80, 0x80, 0x00,
+	0x00, 0x20, 0x00, 0x20, 0x00, 0x6c, 0x0b,
+	]).buffer;
+
+	WebAssembly.compile(buffer).then(wasm => {
+		let squarer = new WebAssembly.Instance(wasm).exports._Z7squareri;
+		let result = 'Finished compiling! Ready when you are... 3^2 = ' + squarer(3);
+		renderAgain(rd_vm, vm => ({ result: result, }));	
+	});
 });
-
 </script>
