--- a/src/main/html/ball.html
+++ b/src/main/html/ball.html
@@ -1,23 +1,23 @@
-<meta charset="utf-8">
-<html style="width: 100%; height: 100%; margin: 0px;">
-	<body style="width: 100%; height: 100%; margin: 0px;">
-		<canvas id="canvas" style="z-index:1; border:1px solid #000000">
-			<!-- style="position:fixed; left:10px; top:10px;" -->
+<meta charset='utf-8'>
+<html style='width: 100%; height: 100%; margin: 0px;'>
+	<body style='width: 100%; height: 100%; margin: 0px;'>
+		<canvas id='canvas' style='z-index:1; border:1px solid #000000'>
+			<!-- style='position:fixed; left:10px; top:10px;' -->
 			Your browser does not support HTML5 canvas.
 		</canvas>
 	</body>
 
-	<script src="frp.js"></script>
-	<script src="fun.js"></script>
+	<script src='frp.js'></script>
+	<script src='fun.js'></script>
 
-	<script type="text/javascript">
-		"use strict";
+	<script type='text/javascript'>
+		'use strict';
 		let { lens, range, read, } = fun();
 
 		let width = window.innerWidth;
 		let height = window.innerHeight;
 
-		let canvas = document.getElementById("canvas");
+		let canvas = document.getElementById('canvas');
 		canvas.width = width - 2;
 		canvas.height = height - 2;
 
@@ -28,12 +28,12 @@
 		let background = {
 			move: () => [background],
 			draw: context => {
-				context.fillStyle = "#556677";
+				context.fillStyle = '#556677';
 				context.fillRect(0, 0, width, height);
 
-				context.fillStyle = "#000000";
-				context.font = "10px Helvetica";
-				context.fillText("Demo", 16, height - 16);
+				context.fillStyle = '#000000';
+				context.font = '10px Helvetica';
+				context.fillText('Demo', 16, height - 16);
 			},
 		};
 
@@ -60,7 +60,7 @@
 
 					/* context.beginPath(); context.arc(ballx, bally, radius, 0, 2 * Math.PI); context.stroke(); */
 
-					context.fillStyle = "#AABBCC";
+					context.fillStyle = '#AABBCC';
 					context.beginPath();
 					context.moveTo(ballx, bally - radius);
 					context.lineTo(ballx + radius * .866, bally - radius * .5);
@@ -95,10 +95,10 @@
 				.list();
 
 			// repaint
-			let context = canvas.getContext("2d");
+			let context = canvas.getContext('2d');
 			read(objects).foreach(object => object.draw(context));
 		});
 
-		frp.mouse.move.wire(d => console.log("mouse " + d.x + "," + d.y));
+		frp.mouse.move.wire(d => console.log('mouse ' + d.x + ',' + d.y));
 	</script>
 </html>
