--- a/src/main/html/five-in-a-row-triangle.html
+++ b/src/main/html/five-in-a-row-triangle.html
@@ -13,18 +13,20 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-triangle.html
 		<div id='target' style='display: flex; justify-content: center;'></div>
 	</body>
 
+	<script src='eval-script.js'></script>
 	<script src='five-in-a-row.js'></script>
 	<script src='frp.js'></script>
-	<script src='fun.js'></script>
 	<script src='pq.js'></script>
-	<script src='render.js'></script>
 
 	<script type='text/javascript'>
 'use strict';
 
-let { lens, range, read, } = fun();
-let { rd, renderAgain, } = render();
-
+Promise.resolve(true)
+.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/fun.js', 'fun()'))
+// .then(({ lens, range, read, }) => {
+.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/render.js', 'render()'))
+// .then(({ rd, renderAgain, }) => {
+.then(() => {
 let view = rd.parse(`
     <span style='display: flex; flex-direction:column; font-size: 36px;'>
         <rd_map v='vm.board'>
@@ -122,6 +124,6 @@ renderAgain(view, vm => ({
         })).list()),
     },
 }));
-
+});
 	</script>
 </html>
